cmake_minimum_required(VERSION 3.21)
project(백준프로젝트)

set(CMAKE_CXX_STANDARD 17)

add_executable(1 Linked_list.cpp )
add_executable(2 Stack.cpp)
add_executable(3 Queue.cpp)
add_executable(4 Q10845.cpp)
add_executable(5 Deque.cpp)
add_executable(6 Q.10866.cpp)
add_executable(7 "Stack 활용.cpp")
add_executable(8 Q.10799.cpp)
add_executable(9 Q.2504.cpp)
add_executable(10 Q.1926.cpp)
add_executable(11 Q.2178.cpp)
add_executable(12 Q.7576.cpp)
add_executable(13 Q.4179.cpp)
add_executable(14 Q.1697.cpp)
add_executable(15 DFS.cpp)
add_executable(16 Q.1629.cpp)
add_executable(17 Q.1074.cpp)
add_executable(18 "DFS와 BFS/DFS와 BFS.cpp" "DFS와 BFS/Q.2206 벽 부수고 이동하기.cpp")
add_executable(19 "DFS와 BFS/Q.2606 바이러스.cpp")
add_executable(20 "DFS와 BFS/Q.2667 단지번호붙이기.cpp")
add_executable(21 "DFS와 BFS/Q.1012 유기농 배추.cpp")
add_executable(22 "DFS와 BFS/Q.7569 토마토.cpp")
add_executable(23 "DFS와 BFS/Q.2206 벽 부수고 이동하기.cpp")
add_executable(24 "백트래킹/Q.15649 N과 M(1).cpp")
add_executable(25 "백트래킹/Q.9663 N-Queen.cpp" )
add_executable(26  "백트래킹/Q.15650 N과 M(2).cpp" )
add_executable(27  "백트래킹/Q.15651 N과 M(3).cpp" )
add_executable(28   "백트래킹/Q.15652 N과 M(4).cpp" )
add_executable(29   "백트래킹/Q.1182 부분수열의 합.cpp")
add_executable(30  "백트래킹/Q.15649 N과 M(1) permutation.cpp")
add_executable(31  "백트래킹/Q.15650 N과 M(2) permutation.cpp")
add_executable(32  "백트래킹/Q.15651 N과 M(3) permutation.cpp")
add_executable(33  "백트래킹/Q.14888 연산자 끼워넣기.cpp")
add_executable(34  "시뮬레이션/Q.15683 감시.cpp" )
add_executable(35  "시뮬레이션/Q.18808 스티커 붙이기.cpp")
