cmake_minimum_required(VERSION 3.21)
project(백준프로젝트)

set(CMAKE_CXX_STANDARD 17)

add_executable(1 Linked_list.cpp )
add_executable(2 Stack.cpp)
add_executable(3 Queue.cpp)
add_executable(4 Q10845.cpp)
add_executable(5 Deque.cpp)
add_executable(6 Q.10866.cpp)
add_executable(7 "Stack 활용.cpp")
add_executable(8 Q.10799.cpp)
add_executable(9 Q.2504.cpp)
add_executable(10 Q.1926.cpp)
add_executable(11 Q.2178.cpp)
add_executable(12 Q.7576.cpp)
add_executable(13 Q.4179.cpp)
add_executable(14 Q.1697.cpp)
add_executable(15 DFS.cpp)
add_executable(16 Q.1629.cpp)
add_executable(17 Q.1074.cpp)
add_executable(18 "DFS와 BFS/DFS와 BFS.cpp" "DFS와 BFS/Q.2206 벽 부수고 이동하기.cpp")
add_executable(19 "DFS와 BFS/Q.2606 바이러스.cpp")
add_executable(20 "DFS와 BFS/Q.2667 단지번호붙이기.cpp")
add_executable(21 "DFS와 BFS/Q.1012 유기농 배추.cpp")
add_executable(22 "DFS와 BFS/Q.7569 토마토.cpp")
add_executable(23 "DFS와 BFS/Q.2206 벽 부수고 이동하기.cpp")
add_executable(24 "백트래킹/Q.15649 N과 M(1).cpp")
add_executable(25 "백트래킹/Q.9663 N-Queen.cpp" )
add_executable(26  "백트래킹/Q.15650 N과 M(2).cpp" )
add_executable(27  "백트래킹/Q.15651 N과 M(3).cpp" )
add_executable(28   "백트래킹/Q.15652 N과 M(4).cpp" )
add_executable(29   "백트래킹/Q.1182 부분수열의 합.cpp")
add_executable(30  "백트래킹/Q.15649 N과 M(1) permutation.cpp")
add_executable(31  "백트래킹/Q.15650 N과 M(2) permutation.cpp")
add_executable(32  "백트래킹/Q.15651 N과 M(3) permutation.cpp")
add_executable(33  "백트래킹/Q.14888 연산자 끼워넣기.cpp")
add_executable(34  "시뮬레이션/Q.15683 감시.cpp" )
add_executable(35  "시뮬레이션/Q.18808 스티커 붙이기.cpp")
add_executable(36  "시뮬레이션/Q.18808 스트커 붙이기 2 3차원.cpp" )
add_executable(37  "시뮬레이션/Q.12100 2048 (Easy).cpp" )
add_executable(38  "시뮬레이션/Q15686 치킨 배달.cpp")
add_executable(39 "정렬/Q.11728 배열 합치기.cpp" )
add_executable(40 "정렬/Q.15688 수 정렬하기 5.cpp")
add_executable(41 "정렬/Q.11652 카드.cpp" )
add_executable(42 "다이나믹 프로그래밍/Q.1463 1로 만들기.cpp" )
add_executable(43 "다이나믹 프로그래밍/Q.9095 1,2,3 더하기.cpp")
add_executable(44 "다이나믹 프로그래밍/Q.2579 계단 오르기.cpp" )
add_executable(45  "다이나믹 프로그래밍/Q.1149 RGB거리.cpp")
add_executable(46 "다이나믹 프로그래밍/Q.11726 2xN 타일링.cpp")
add_executable(47 "다이나믹 프로그래밍/Q.11659 구간 합 구하기 4.cpp")
add_executable(48 "다이나믹 프로그래밍/Q.12852 1로 만들기 2.cpp" )
add_executable(49 "그리디/Q.11047 동전 0.cpp" )
add_executable(50 "그리디/Q.1931 회의실 배정.cpp")
add_executable(51 "그리디/Q.2217 로프.cpp")
add_executable(52 "그리디/Q.1026 보물.cpp")
add_executable(53 "그리디/Q.12865 평범한 배낭.cpp")



